# k-term

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
src/config/: mod.rs  theme.rs
src/input/: keyboard.rs  mod.rs
src/pty/: shell.rs
src/render/: engine.rs
src/state/: buffer.rs  config.rs  mod.rs
src/terminal/: grid.rs  state.rs
