[package]
name = "k-term"
version = "0.1.0"
edition = "2024"

[dependencies]
portable-pty = "0.8"

vte = "0.11"

winit = "0.30"

wgpu = "22.1"

tokio = { version ="1.37", features = ["full"] }

anyhow = "1.0"

pollster = "0.3"

glyphon = "0.6"
bytemuck = { version = "1.25.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
arboard = "3.6.1"
unicode-width = "0.2.2"
